--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -66,3 +66,40 @@ a {
     }
   }
 }
+header {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #333;
+  }
+  li {
+    float: left;
+    border-right: 1px solid #bbb;
+  }
+  li:last-child {
+    border-right: none;
+  }
+  li a {
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    cursor: pointer;
+  }
+  li a:hover:not(.loginBtn) {
+    background-color: #111;
+  }
+  .loginBtn {
+    background-color: #04aa6d;
+  }
+}
+.mainContent {
+  padding: 16px;
+  margin: 3rem auto;
+}
